# aoc-2020

./: Cargo.toml
define_main/: Cargo.toml
define_main/src/: lib.rs
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  solutions.rs  vm.rs
src/days/: day1.rs  day10.rs  day11.rs  day13.rs  day3.rs  day4.rs  day8.rs  day9.rs  mod.rs
src/days/y2020/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day22.rs  day23.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
src/utils/: crt.rs  macros.rs  mod.rs
src/vm/: instruction.rs  mod.rs  op.rs
