[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Thomas BARUSSEAU <thomas.barusseau@thetribe.io>"]
edition = "2018"

[lib]
# bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
chrono = "0.4.19"
itertools = "0.9.0"
lazy_static = "1.4.0"
rayon = "1.5.0"
regex = "1.4.2"
structopt = "0.3.21"
define_main = { path = "./define_main" }
